--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl: "/"
 url: acrokat.github.io
 
 # User settings
-username: acrokat
+username: Katherine Kampf
 user_description: Test
-user_title: Product Manager
+user_title: Product Manager - acrokat
 email: kvkampf@gmail.com
 twitter_username: hardworkingpm
 github_username:  acrokat
