--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: acrokat.github.io
 
 # User settings
 username: Katherine Kampf
-user_description: Test
+user_description: Product Manager passionate about connecting people through technology. Previous experience with EdTech, Big Data, AI, gaming, and Python.
 user_title: Product Manager - acrokat
 email: kvkampf@gmail.com
 twitter_username: hardworkingpm
