--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: katherine kampf
 description: product manager
 baseurl: "/"
-url: acrokat.github.io
+url: acrokat.me
 
 # User settings
 username: katherine kampf
