--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: katherine kampf
 description: product manager
-baseurl: "/"
+# baseurl: "/"
 url: acrokat.me
 
 # User settings
