--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ exclude: ['package.json', 'src' , 'node_modules']
 # carousel setup
 carousels:
   - images: 
-    - image: /assets/img/headshot.png
-    - image: /assets/img/mountains.jpg
-    - image: /assets/img/mountains.jpg
-    - image: /assets/img/mountains.jpg
+    - image: ../assets/img/headshot.png
+    - image: ../assets/img/mountains.jpg
+    - image: ../assets/img/mountains.jpg
+    - image: ../assets/img/mountains.jpg
   - images: 
-    - image: /assets/img/mountains.jpg
+    - image: ../assets/img/mountains.jpg
