--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: acrokat.me
 
 # User settings
 username: Katherine Kampf
-user_description: Product Manager passionate about connecting people through technology. <ln></ln> Previous experience with EdTech, Big Data, AI, gaming, and Python.
+user_description: Product Manager passionate about connecting people through technology. <br> Previous experience with EdTech, Big Data, AI, gaming, and Python.
 user_title: product manager - acrokat
 email: kvkampf@gmail.com
 twitter_username: acrokatto
