update twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ username: Katherine Kampf
 user_description: Product Manager passionate about connecting people through technology. <br> Previous experience with EdTech, Big Data, AI, gaming, and Python.
 user_title: product manager - acrokat
 email: kvkampf@gmail.com
-twitter_username: acrokatto
+twitter_username: kat_kampf
 github_username:  acrokat
 
 # Google-analytics
